adjust form style, fix button bg color on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -138,6 +138,7 @@ nav {
 }
 label {
   color: rgb(242, 242, 242);
+  margin-top: .75rem;
 }
 .filter {
   margin: .2rem;
@@ -226,6 +227,7 @@ label {
   flex-direction: column;
   max-width: 100%;
   margin: 0 auto;
+  align-items: center;
 }
 .close {
   position: absolute;
@@ -248,9 +250,11 @@ input[type=text], input[type=password] {
   color: whitesmoke;
   background-color: rgb(40, 40, 40);
   border: none;
+  border-radius: 0;
   border-bottom: 1px solid rgb(31, 201, 88);
   margin-top: .7rem;
   padding-left: .4rem;
+  outline: none;
 }
 input[type=text]:focus, input[type=password]:focus {
   border-bottom: 1px solid rgb(0, 193, 252);
@@ -258,12 +262,16 @@ input[type=text]:focus, input[type=password]:focus {
 input[type=submit] {
   width: 250px;
   height: 30px;
-  margin: 1rem 0 1.1rem;
+  margin: .75rem 0 1.1rem;
   font-size: 1.2rem;
   background-color: rgb(31, 201, 88);
   border: 2px solid rgb(31, 201, 88);
   border-radius: 15px;
   transition: .3s;
+  /* below so background color corrent on mobile */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 input[type=submit]:hover, input[type=submit]:focus {
   cursor: pointer;
@@ -304,6 +312,7 @@ input[type=submit]:hover, input[type=submit]:focus {
   flex-direction: column;
   max-width: 100%;
   margin: 0 auto;
+  align-items: center;
 }
 #noMatch {
   color: red;
